// Copyright 2020 The Atlas Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package atlas;

import "type_header.proto";
import "type_metadata.proto";

enum DataChunkType {
    // Due to first enum value has to be zero in proto3
    DATA_CHUNK_TYPE_RESERVED    = 0;
    DATA_CHUNK_TYPE_UNSPECIFIED = 100;
    DATA_CHUNK_TYPE_DATA        = 200;
}

// DataChunk is a chunk of data transferred as a single piece.
// Can be part of bigger data, transferred by chunks
message DataChunk {
    Header header = 100;

    oneof metadata_optional {
        // Metadata of the data
        Metadata metadata = 200;
    }

    oneof len_optional {
        // Len of the whole data
        int64 len = 300;
    }

    oneof offset_optional {
        // Offset of the current chunk in the whole data
        int64 offset = 400;
    }

    oneof last_optional {
        // Last identifies last chunk of the data within one data transfer
        bool last = 500;
    }

    // Bytes is the purpose of the whole data chunk type
    // May contain any arbitrary sequence of bytes no longer than 2^32
    bytes bytes = 600;
}
